learning/kubernetes/gateway-api/02-httproute/02-path-based-routing/default-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-service
  namespace: default
  labels:
    app: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
