learning/kubernetes/gateway-api/02-httproute/02-path-based-routing/default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: default
